--- a/style.css
+++ b/style.css
@@ -3,5 +3,18 @@ body {
 }
 
 .card {
-    width: 18rem;
+    width: 19rem;
+
+}
+
+/* Small devices (phones, 768px and down) */
+@media only screen and (max-width: 768px) {
+    .card {
+        width: 100%;
+    }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+    .card {
+        width: 47%;
+    }
 }
